# mcp-manager-python

./: .README.md.swp  .gitignore  ADMIN_GUIDE.md  ARCHITECTURE.md  CLAUDE.md  CONTINUATION_GUIDE.md  FUTURE_AI_FEATURES.md  LICENSE  PLAN.md  README.md  RESUME_INSTRUCTIONS.md  TEST.md  TESTING.md  TEST_MENU_GUIDE.md  TODO.md  USER_GUIDE.md  config.example.toml  debug_docker_removal.py  inspect_servers.py  pyproject.toml  pytest.ini  run_tests.sh  test  test_docker_cleanup.py  test_menu.py  test_real_removal.py  test_report.html  test_rich_menu.py
core/tool_discovery/: __init__.py  aggregator.py  base.py  docker_desktop_discovery.py  docker_discovery.py  npm_discovery.py
docs/: README.md
docs/html/: ARCHITECTURE.html  MCP-Manager-Complete-Documentation.html  README.html  USER_GUIDE.html
docs/pdf-src/: ARCHITECTURE.md  README.md  USER_GUIDE.md
scripts/: generate-pdfs.sh  github-pdf-generator.py  render-diagrams.py
src/mcp_manager/: __init__.py
src/mcp_manager/ai/: __init__.py  llm_providers.py  tool_recommender.py
src/mcp_manager/ai/curation/: __init__.py  models.py
src/mcp_manager/ai/providers/: __init__.py  claude_provider.py  ollama_provider.py  openai_provider.py
src/mcp_manager/analytics/: __init__.py  analyzer.py  cleanup.py  collector.py  config.py  database.py  query_processor.py  service.py  usage_analytics.py
src/mcp_manager/api/: __init__.py  auth.py  endpoints.py  middleware.py  models.py  server.py
src/mcp_manager/claude/: README.md  __init__.py  cache_manager.py  claude_client.py  claude_interface.py  config_loader.py  config_writer.py  docker_gateway.py  server_operations.py  sync_manager.py
src/mcp_manager/cli/: __init__.py  enhanced_commands.py  main.py  main.py.backup  main_new.py  main_old.py  test_admin.py  workflow_commands.py
src/mcp_manager/cli/commands/: __init__.py  ai.py  analytics.py  api.py  discovery.py  monitoring.py  proxy.py  quality.py  suite.py  system.py  tools.py  ui.py  workflow.py
src/mcp_manager/cli/helpers/: __init__.py  configuration.py  discovery.py  display.py  errors.py
src/mcp_manager/core/: __init__.py  ai_config.py  ai_curation.py  background_monitor.py  change_detector.py  claude_interface.py  config_templates.py  discovery.py  exceptions.py  manager.py  models.py  modes.py  simple_manager.py  simple_manager_old.py  suite_manager.py  tool_discovery_logger.py  tool_registry.py  watchers.py  workflow_manager.py
src/mcp_manager/core/config/: proxy_config.py
src/mcp_manager/core/discovery/: __init__.py  cache.py  docker.py  helpers.py  npm.py  server_discovery.py  similarity.py
src/mcp_manager/core/managers/: __init__.py  discovery_manager.py  (+4 more)
src/mcp_manager/tui/: __init__.py  main.py  menu_app.py  pycui_app.py  rich_menu.py  screens.py  simple_tui.py  widgets.py
src/mcp_manager/utils/: __init__.py  config.py  logging.py  validators.py
tests/: README.md  __init__.py  conftest.py  test_basic_commands.py  test_cli.py  test_cli_validation.py  test_core.py  test_discovery.py  test_discovery_enhanced.py  test_error_handling.py  test_integration.py  test_quality_tracking.py  test_runner.py  test_server_management.py  test_suite_management.py  test_tui_integration.py  test_utils.py  test_workflows.py
tests/fixtures/: dynamic_suite_loader.py  suite_loader.py  suite_test_integration.py  test_suites.db  test_suites_setup.py
tests/results/: test-results-error-handling.xml  test-results-integration-tests.xml  test-results-quality-tracking.xml  test-results-regression-tests.xml  test-results-server management.xml  test-results-server-management.xml  test-results-smoke tests.xml  test-results-smoke-tests.xml  test-results-suite-management.xml  test-results-summary.json  test-results-unit tests.xml  test-results-unit-tests.xml  test-results-user-workflows.xml
tests/tools/: README.md  show_test_files.py  test_menu.py
tests/utils/: __init__.py  test_data_manager.py  validators.py
(+53 files in other folders)
